# uaf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  agents.md  demo.py  gemini_plan_1.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md
docs/: architecture.md  ui-guide.md  visual-testing.md
docs/plans/: 002-database-layer.md  003-security-layer.md  004-application-layer.md  006-shapes-support.md  007-layout-fidelity-tests.md  008-layout-inspector-ui.md  009-persistence-latex-sharing-flow.md  009-persistence.md
docs/standards/: pdf-text-positioning.md
src/uaf/: __init__.py
src/uaf/app/: __init__.py  mcp_server.py
src/uaf/app/api/: __init__.py  dependencies.py  routes_artifacts.py  routes_auth.py  routes_import_export.py  routes_lens.py  routes_nodes.py  routes_sharing.py  routes_undo.py  schemas.py
src/uaf/app/formats/: __init__.py  csv_format.py  docx_format.py  gdoc_format.py  latex.py  markdown.py  pdf_format.py  plaintext.py
src/uaf/app/frontend/: __init__.py  routes.py  sanitize.py
src/uaf/app/lenses/: __init__.py  actions.py  doc_lens.py  flow_lens.py  grid_lens.py
src/uaf/app/static/: doc-editor.js  editor-core.js  grid-editor.js  layout-inspector.js  style.css
src/uaf/app/templates/: base.html  dashboard.html  editor.html  flow.html  login.html  spreadsheet.html
src/uaf/app/templates/partials/: artifact_list.html  doc_blocks.html  doc_layout.html  grid_table.html  (+1 more)
src/uaf/core/: __init__.py  edges.py  errors.py  formula.py  node_id.py  nodes.py  operations.py  serialization.py
src/uaf/db/: __init__.py  bundle.py  eavt.py  graph_db.py  journal.py  journaled_graph_db.py  materializer.py  operation_log.py  query.py  store.py  undo.py  undo_journal.py
src/uaf/security/: __init__.py  acl.py  audit.py  auth.py  primitives.py  secure_graph_db.py  security_store.py
src/udf/: __init__.py
src/udf/app/: __init__.py
src/udf/core/: __init__.py
tests/fixtures/csv/: large.csv  with_types.csv
tests/fixtures/latex/: complex.tex  simple.tex  with_code.tex  with_math.tex
tests/fixtures/markdown/: complex.md  simple.md  with_code.md  with_links.md  with_lists.md
tests/fixtures/txt/: multiline.txt  simple.txt
tests/uaf/app/: _pdf_fidelity_helpers.py  test_api.py  test_doc_browser.py  test_doc_editor_routes.py  test_doc_lens.py  test_flow_lens.py  test_flow_list_browser.py  test_format_handlers.py  test_grid_browser.py  test_grid_editor_routes.py  test_grid_lens.py  test_inline_math_visual.py  test_integration.py  test_latex_handler.py  test_lens_protocol.py  test_mcp_server.py  test_pdf_fidelity.py  test_roundtrip.py  test_sanitize.py  test_sharing_api.py  test_undo_browser.py  test_visual_position_fidelity.py
tests/uaf/core/: test_edges.py  test_formula.py  test_node_id.py  test_nodes.py  test_operations.py  test_serialization.py  test_task_extended.py
tests/uaf/db/: test_bundle.py  test_eavt.py  test_graph_db.py  test_integration.py  test_journal.py  test_journal_bench.py  test_journaled_graph_db.py  test_materializer.py  test_operation_log.py  test_persistence_bench.py  test_query.py  test_store.py  test_undo.py  test_undo_journal.py
tests/uaf/security/: test_acl.py  test_audit.py  test_auth.py  test_integration.py  test_primitives.py  test_secure_graph_db.py  test_security_store.py
