[project]
name = "universal-artifact-format"
version = "0.1.0"
description = "A graph-based, AI-native knowledge protocol replacing file-based legacy software"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sortedcontainers>=2.4",
    "mistune>=3.0",
    "PyJWT>=2.8",
    "argon2-cffi>=23.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.9",
    "mcp>=1.0",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "pymupdf>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uaf"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "sortedcontainers-stubs>=2.4",
    "httpx>=0.28",
    "playwright>=1.40",
]

[tool.ruff]
line-length = 99
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/uaf/app/api/*.py" = ["B008", "TCH001", "TCH003"]  # FastAPI Depends() pattern
"src/uaf/app/frontend/*.py" = ["B008", "TCH001", "TCH003"]  # FastAPI Depends() pattern
"tests/**/test_*_visual.py" = ["E402"]  # imports after pytest.importorskip()

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["docx", "docx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not benchmark'"
markers = [
    "playwright: visual fidelity tests requiring headless browser (playwright install chromium)",
    "benchmark: persistence performance benchmarks (run with make bench)",
]
